# MCServerNap

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  lib.rs  main.rs  preserialized_packets.rs
