[package]
name = "mcservernap"
version = "0.2.1"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
regex = "1"
