[package]
name = "mcservernap"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "process"] }
log = "0.4"
env_logger = "0.11.8"
anyhow = "1.0"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
serde_json = "1.0.145"
base64 = "0.22.1"
image = "0.25.8"
